--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ output:
 IS_README <- TRUE
 ```
 
-Repository to reproduce results from our study on global versus national learning rates in the solar PV industry.
+This repository contains the data and code to reproduce results from our study on global versus national learning rates in the solar PV industry.
 
 # Folder descriptions
 
@@ -22,25 +22,33 @@ Contains all of the "raw" data used in our analyses as well as a single `formatt
 
 file or folder | description
 -----|--------------------------------
-`0functions.R` | Custom functions
-`0setup.R` | Loads libraries, creates `dir` object (a list of paths to folders and objects), and loads `0functions.R`
-`1digitize_plots.R` | Code to extract data from some image files in the `data` folder
-`2format_data.R` | Formats and harmonizes all raw data and saves the result as the list object at `data/formatted.Rds`
-`3compare_us_data.R` | Some quick checks to compare the capacity data (NREL, SEIA, and IRENA) and cost data (NREL and LBNL) for the U.S. We decided to use the SEIA data for capacity and LBNL data for cost for our analyses.
-`4learning_curves.R` | Estimates learning curve models and saves all results as the list object at `output/lr_models.Rds`
-`5historical_scenarios.R` | Uses the estimates learning curves models to compute differences in historical costs under different scenarios. Results are saved as the list object at `output/historical_scenarios.Rds`
-`6projection_scenarios.R` | Uses the estimates learning curves models to compute differences in projected future costs under different scenarios. Results are saved as the list object at `output/projection_scenarios.Rds`
-`7charts.R` | All charts
+`0a_run.R` | A single file to reproduce all analyses.
+`0functions.R` | Custom functions used in our analyses.
+`0setup.R` | Loads libraries, creates `dir` object (a list of paths to folders and objects), and loads `0functions.R`.
+`1format_data.R` | Formats and harmonizes all raw data and saves the result as the list object at `data/formatted.Rds`.
+`2learning_curves.R` | Estimates learning curve models and saves all results as the list object at `output/lr_models.Rds`.
+`3historical_scenarios.R` | Uses the estimates learning curves models to compute differences in historical costs under different scenarios. Results are saved as the list object at `output/historical_scenarios.Rds`.
+`4projection_scenarios.R` | Uses the estimates learning curves models to compute differences in projected future costs under different scenarios. Results are saved as the list object at `output/projection_scenarios.Rds`.
+`5charts.R` | Code to reproduce all charts used in our analyses.
+`6summary.R` | Code to print out a summary of all main results.
+`7sensitivity.R` | Several sensitivity analyses. Compares differences in the raw cost and capacity data used for the U.S. as well as sensitivities to different 2020 starting prices on the projected prices.
+`8tables.Rmd` | Generates all tables in the `output/tables.docx` file.
 
 ## figs
 
-All charts created in the `code/7charts.R` file are saved here as pdfs and pngs.
+All charts created in the `code/5charts.R` file are saved here as pdfs and pngs.
 
 ## output
 
 All model / scenario analyses outputs (other than charts) are saved here.
 
 # Reproducing the analyses
+
+To reproduce the analyses, first open the `solar-learning-2021.Rproj` file, which sets the working directory to the root of the files in this repository. The repository root must be set as the working directory otherwise the code will error.
+
+## Full reproduction
+
+The `code/0a_run.R` file contains scripts to fully reproduce the entire set of analyses. This is here purely for convenience.
 
 ## Setup
 
@@ -52,7 +60,7 @@ source(here::here('code', '0setup.R'))
 
 ## Formatting the data
 
-All of the raw data are stored in the `/data` folder. The script at `/code/2format_data.R` formats all of this data and saves it as a list stored at `/data/formatted.Rds`.
+All of the raw data are stored in the `/data` folder. The script at `/code/1format_data.R` formats all of this data and saves it as a list stored at `/data/formatted.Rds`.
 
 To load this list of formatted data, run this line after sourcing the `/code/0setup.R` file:
 
@@ -65,7 +73,7 @@ names(data)
 
 ## Learning curve models
 
-All of the learning curve models are estimated by running the `/code/4learning_curves.R` file. Results are saved in a list of data frames containing formatted model results stored in `/output/lr_models.Rds`.
+All of the learning curve models are estimated by running the `/code/2learning_curves.R` file. Results are saved in a list of data frames containing formatted model results stored in `/output/lr_models.Rds`.
 
 To load formatted results, run this line:
 
@@ -78,7 +86,7 @@ names(lr)
 
 ## Historical scenarios
 
-All of the historical (2008 - 2018) cost scenario calculations are computed by running the `/code/5historical_scenarios.R` file. Results are saved in a list of data frame containing formatted results stored in `/output/historical_scenarios.Rds`.
+All of the historical (2008 - 2018) cost scenario calculations are computed by running the `/code/3historical_scenarios.R` file. Results are saved in a list of data frame containing formatted results stored in `/output/historical_scenarios.Rds`.
 
 To load the results of the historical scenarios, run this line:
 
@@ -91,7 +99,7 @@ names(cost)
 
 ## Projected scenarios
 
-All of the future projected (2018 - 2030) cost scenario calculations are computed by running the `/code/6projection_scenarios.R` file. Results are saved in a list of data frame containing formatted results stored in `/output/projection_scenarios.Rds`.
+All of the future projected (2018 - 2030) cost scenario calculations are computed by running the `/code/4projection_scenarios.R` file. Results are saved in a list of data frame containing formatted results stored in `/output/projection_scenarios.Rds`.
 
 To load the results of the projected scenarios, run this line:
 
@@ -104,4 +112,4 @@ names(proj)
 
 ## Charts
 
-All of the charts are generated by running the `/code/7charts.R` file. Results are saved as pngs and pdfs in the `/figs` folder.
+All of the charts are generated by running the `/code/5charts.R` file. Results are saved as pngs and pdfs in the `/figs` folder.
