--- a/code/7tables.Rmd
+++ b/code/7tables.Rmd
@@ -25,7 +25,7 @@ my_table <- function(x) {
   result <- tbl_regression(x, intercept = TRUE) %>% 
     add_significance_stars(
     hide_se = TRUE,
-    pattern = "{estimate}{stars} ({std.error})"
+    pattern = "{estimate} ({std.error}){stars}"
     ) %>%
     modify_header(estimate ~ "**Est. (Std. Err.)**")
   return(result)
