--- a/summary/summary.Rmd
+++ b/summary/summary.Rmd
@@ -48,22 +48,14 @@ $$
 \gamma_i \ln s_t 
 $$
 
-Using global cumulative installed PV capacity for $q_t$ produces global learning coefficients for country $i$. But learning can be broken into components that are national and global. Assuming that the national learning is derived from national cumulative installed capacity, $q_{it}$, and that the global learning is derived from the cumulative installed capacity in all other countries, $q_{jt}$, then $q_t$ in the above equations can be defined as a weighted sum of $q_{it}$ and $q_{jt}$:
+For each country, $i$, we estimate "global learning" coefficients (Extended Data Table 1), $i$, using linear least-squares regression on (2). The "global learning" model is based on the assumptions that 1) learning was global during the historical period of scaling up PV module production, and 2) variations in country-level module pricing were due to transportation, administrative, and other non-learning costs. We then construct counterfactual "national learning" scenarios by assuming that the learning-related cost improvements in country $i$ from the starting year, $t_0$, are only derived from incrementally more nationally-installed PV capacity: 
 
 $$
-q_t = q_{it} + (1 - \lambda_i) q_{jt},
+q_t - q_{t-1} = q_{t_0} + (q_{it} - q_{it-1}) + (1 - \lambda_i) (q_{jt} - q_{jt-1}),
 $$
 
-where $\lambda_i$ is a value ranging from 0 to 1 that controls the proportion of learning-related cost improvements from national versus global learning for country $i$. If $\lambda_i = 1$, then all learning is nationally-derived, and if $\lambda_i = 0$, then all learning is globally-derived. Substituting this into the above equation yields:
-
-$$
-\ln c_{it} = 
-\ln \alpha_i + 
-\beta_i \ln \left [ q_{it} + (1 - \lambda_i) q_{jt} \right ] + 
-\gamma_i \ln s_t 
-$$
-
-Since $0 \le \lambda_i \le 1$, the above model can be iteratively estimated using every possible value of $\lambda_i$ from $0$ to $1$. The "best" value of $\lambda_i$ for country $i$ is the one that results in the smallest sum of squared residuals.
+\noindent
+where $q_{it}$ is the cumulative installed capacity in country $i$ in year $t$, $q_{jt}$ is the cumulative installed capacity in all other countries in year $t$, and $\lambda_i$ is a value ranging from 0 to 1. This defines a scenario of incremental capacity in each year that increasingly comes from national as opposed to global installations as $\lambda_i$ shifts from 0 to 1. Since $0 \le \lambda_i \le 1$, equation (2) can be iteratively estimated using every possible value of $\lambda_i$ from $0$ to $1$. The "best" value of $\lambda_i$ for country $i$ is the one that results in the smallest sum of squared residuals.
 
 ## Interpreting $\lambda$ in the context of learning
 
