--- a/about/about.Rmd
+++ b/about/about.Rmd
@@ -30,7 +30,16 @@ df_china <- data$hist_china
 df_germany <- data$hist_germany
 ```
 
-## Two-factor learning model
+**Description**: This app allows readers of our manuscript to assess the sensitivity of our study outcomes to different modeling assumptions. Click on the "Historical" and "Projections" tabs to see historical and projected outcomes.
+
+**Paper Title**: Quantifying the role of globalized solar photovoltaic 
+supply chains in reaching climate targets.
+
+**Authors**: John Paul Helveston, Gang He, & Michael R. Davidson,
+
+**Abstract**: Achieving global carbon neutrality relies on the deployment of renewable energy at unprecedented speed and scale, yet countries sometimes implement policies that increase costs by restricting the free flow of capital, talent, and innovation and localizing benefits in terms of growth, employment, and trade surpluses. This paper contributes to the conversation on this dilemma by quantifying the implications of nationalistic policies for domestically manufacturing solar photovoltaic (PV) modules. Using detailed historical capacity, component, and input material price data of solar photovoltaic (PV) deployment in the U.S., Germany, and China, we develop a two-factor learning model to assess the savings of a globalized solar PV supply chain in terms of the cost of module deployment to achieve ambitious low-carbon goals. We estimate that the globalized PV module market has saved PV installers in the U.S. $24 ($19 - $31) billion, Germany $7 ($5 - $9) billion, and China $36 ($26 - $45) billion from 2008 to 2020 compared to a counterfactual scenario where domestic manufacturers supply an increasing proportion of installed capacities in each country over a 10-year period. In projecting the same scenario forward from 2020, we estimate that 2030 unit solar module prices would be approximately 20-25% higher in each country compared to a future with globalized supply chains. International climate policy benefits from a globalized low-carbon value chain, and these results point to the need for complementary policies to mitigate welfare distribution effects and potential impacts on technological crowding-out.
+
+### Two-factor learning model
 
 A two-factor learning model relating the unit cost, $c_{it}$, in year $t$ and country $i$ of solar PV modules to the cumulative installed PV capacity in year $t$, $q_t$, and globally-averaged polysilicon prices in year $t$, $s_t$, (the primary input material to PV modules) is given by:
 
