--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,8 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+[![DOI](https://zenodo.org/badge/373634772.svg)](https://zenodo.org/badge/latestdoi/6989075)
+
 ```{r setup, echo=FALSE}
 IS_README <- TRUE
 ```
