--- a/README.Rmd
+++ b/README.Rmd
@@ -59,30 +59,7 @@ Reproducing the analyses requires the follow setup steps:
 3. If on a Mac, install [XQuartz](https://www.xquartz.org/) to enable Cairo graphics (for reproducing figures).
 4. Download the files in this repository. 
 5. Open the `solar-learning-2021.Rproj` file, which sets the working directory to the root of the files in this repository. The repository root must be set as the working directory otherwise the code will error.
-6. Install additional required R packages using this code:
-
-```{r, eval=FALSE}
-install.packages(c(
-    "broom",
-    "Cairo",
-    "cowplot",
-    "flextable",
-    "ggrepel",
-    "gtsummary",
-    "ggtext",
-    "here",
-    "janitor",
-    "priceR",
-    "readxl",
-    "remotes",
-    "renderthis",
-    "rjson",
-    "scales",
-    "shiny",
-    "shinythemes",
-    "tidyverse"
-))
-```
+6. Install additional required R packages by running the code in the `/code/0install.R` file (you'll only need to install these packages once).
 
 ## Full reproduction
 
